--- a/template_index.html
+++ b/template_index.html
@@ -6,16 +6,16 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self';" />
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self';" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/image/logo.ico" />
-    <link rel="stylesheet" href="/style/main.css" />
+    <link rel="icon" href="<%= urlRoot %>/image/logo.ico" />
+    <link rel="stylesheet" href="<%= urlRoot %>/style/main.css" />
     <title>
-        JsMvcFw app
+        <%= name %>
     </title>
 </head>
 
 <body>
     <div id="jsmvcfw_app"></div>
-    <script src="/js/main.js"></script>
+    <script src="<%= urlRoot %>/js/main.js"></script>
 </body>
 
 </html>
